# countland

./: .gitignore  LICENSE  README.md  countland.bib  development.md  manuscript.Rmd  supplemental_information.rmd
countland-R/: .Rbuildignore  .Rhistory  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  countland.bib  countland_vignette.Rmd  countland_vignette.html  manuscript.Rmd  nature_genetics.csl  performance_evaluation_gold_standard.Rmd  performance_evaluation_silver_standard.Rmd  vignette_pig_placozoa.Rmd  vignette_seurat_comparison.Rmd  vignette_tutorial.Rmd
countland-R/.Rproj.user/pcs/: windowlayoutstate.pper
countland-R/R/: IMA.R  countland.R  countland_IMA.R  countland_cluster.R  countland_dot.R  countland_embed.R  countland_genes.R  countland_marker.R  countland_rank_reduction.R  countland_score.R  countland_shared_counts.R  countland_subsample.R  countland_subset.R  countland_utils.R  integer_matrix_approximation.R
countland-R/inst/testdata/: barcodes.tsv  genes.tsv  matrix.mtx
countland-R/man/: Center.Rd  Cluster.Rd  CountIndex.Rd  Dot.Rd  Dots.Rd  Embed.Rd  IMA.Rd  IMA_Compute_Init_Scaled.Rd  IMA_Update_Factor.Rd  IMA_init.Rd  IMA_params.Rd  Log.Rd  LogGeneNumber.Rd  Normalize.Rd  PlotClusters.Rd  PlotEigengap.Rd  PlotEmbedding.Rd  PlotGeneCounts.Rd  PlotIMA.Rd  PlotIMAElbow.Rd  PlotMarker.Rd  PlotSharedCounts.Rd  PrintGeneNumber.Rd  RankMarkerGenes.Rd  RemoveEmpty.Rd  RescaleVariance.Rd  RestoreCounts.Rd  RunIMA.Rd  ScikitManifoldSpectralEmbedding.Rd  ScoreCells.Rd  ScoreGenes.Rd  SharedCounts.Rd  Subsample.Rd  SubsampleCol.Rd  SubsetCells.Rd  SubsetGenes.Rd  countland-class.Rd  countland.Rd  listCols.Rd
countland-R/more_vignettes_and_analyses/: performance_evaluation_gold_standard.Rmd  performance_evaluation_gold_standard_results.RData  performance_evaluation_silver_standard.Rmd  performance_evaluation_silver_standard_results.RData  vignette-pig-placozoa.Rmd  vignette-seurat-comparison.Rmd
countland-R/tests/: testthat.R
countland-R/tests/testthat/: test-countland.R  test-countland_IMA.R  test-countland_cluster.R  test-countland_dot.R  test-countland_embed.R  test-test_general.R  (+5 more)
countland-R/tutorials_and_vignettes/: vignette-rank-reduction.Rmd  vignette-seurat-comparison.Rmd  vignette-tutorial.Rmd
countland-R/vignettes/: vignette-tutorial.Rmd  vignette-tutorial.html  vignette-tutorial.md  vignette_pig_placozoa.Rmd  vignette_rank_reduction.Rmd  vignette_seurat_comparison.Rmd
countland-py/: .pre-commit-config.yaml  LICENSE.txt  countland.py  countland_rank_reduction_vignette.html  countland_rank_reduction_vignette.ipynb  countland_vignette.html  countland_vignette.ipynb  setup.cfg  vignette_rank_reduction.ipynb  vignette_scanpy_comparison.ipynb  vignette_tutorial.ipynb
countland-py/countland/: __init__.py  countland.py  integer_matrix_approximation.py
countland-py/tests/: test_countland.py
countland-py/vignettes/: vignette_rank_reduction.ipynb  vignette_tutorial.ipynb
data/Gold_zeros_032922/: genes.tsv
tutorials_and_vignettes/R_tutorials_and_vignettes/: performance_evaluation_gold_standard.Rmd  performance_evaluation_gold_standard_results.RData  performance_evaluation_silver_standard.Rmd  performance_evaluation_silver_standard_results.RData  vignette-pig-placozoa.Rmd  vignette-pig-placozoa.md  vignette-rank-reduction.Rmd  vignette-rank-reduction.md  vignette-seurat-comparison.Rmd  vignette-seurat-comparison.md  vignette-sponge.Rmd  vignette-tutorial.Rmd  vignette-tutorial.md
tutorials_and_vignettes/python_tutorials_and_vignettes/: vignette_rank_reduction.ipynb
(+8 files in other folders)
