[metadata]
name = countland
version = 0.01
author = Sam Church
author_email = 
description = tools for analyzing biological count data
long_description = file: ../README.md
long_description_content_type = text/markdown
url = https://github.com/shchurch/countland
project_urls =
    Bug Tracker = https://github.com/shchurch/countland/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL3 License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = .
packages = find:
python_requires = >=3.6

setup_requires =
    setuptools

install_requires =
    matplotlib
    numpy
    pandas
    scanpy
    scipy
    seaborn
    sklearn
    statsmodels
    umap

[options.extras_require]
dev =
    pytest
    black == 21.7b0
    flake8 == 3.9.2
    pre-commit == 2.13.0

[options.package_data]
phylopytho = ../data

[options.packages.find]
where = .

[aliases]
test = pytest [test]
