[metadata]
name = countland
version = 0.01
author = Sam Church
author_email = 
description = tools for analyzing biological count data
url = https://github.com/shchurch/countland
project_urls =
    Bug Tracker = https://github.com/shchurch/countland/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL3 License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = .
packages = find:
python_requires = >=3.6

setup_requires =
    setuptools

install_requires =
    glmpca
    imgaug <0.2.7, >=0.2.5  #  Version specification for dependencies
    matplotlib
    numpy <1.22, >=1.18   # Version specification for numba
    pandas
    scanpy
    scipy
    seaborn
    sklearn
    statsmodels
    umap

[options.extras_require]
dev =
    pytest
    black == 22.3.0
    flake8 == 4.0.1
    pre-commit == 2.17.0

[options.package_data]
countland = ../data

[options.packages.find]
where = .

[aliases]
test = pytest [test]

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests